# frontier-template-with-validator-set

./: README.md  vset-pallet-instructions.md
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
test-utils/client/: Cargo.toml
utils/: package-lock.json  testnet-instructions.md
