[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'frontier-template-node'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
async-trait = '0.1'
futures = '0.3'
jsonrpc-core = '18.0.0'
jsonrpc-pubsub = '18.0.0'
log = '0.4.8'
structopt = '0.3.8'

[dependencies.fc-consensus]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-db]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-mapping-sync]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-rpc]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-rpc-core]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-consensus]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-rpc]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frontier-template-runtime]
default-features = false
features = ['std']
path = '../runtime'

[dependencies.pallet-dynamic-fee]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-ethereum]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-evm]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus-manual-seal]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate'

[features]
aura = ['frontier-template-runtime/aura']
default = ['aura']
manual-seal = ['frontier-template-runtime/manual-seal']
runtime-benchmarks = ['frontier-template-runtime/runtime-benchmarks']